--- a/realMiniProjet/realMiniProjet.csproj
+++ b/realMiniProjet/realMiniProjet.csproj
@@ -170,13 +170,18 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\Admin\AspNetUsersController.cs" />
+    <Compile Include="Controllers\Admin\AdminController.cs" />
     <Compile Include="Controllers\Admin\FilieresController.cs" />
-    <Compile Include="Controllers\Admin\GroupesController.cs" />
-    <Compile Include="Controllers\Admin\StudentsController.cs" />
+    <Compile Include="Controllers\Admin\HandlingGroupesController.cs" />
+    <Compile Include="Controllers\Admin\HandlingProfessorsController.cs" />
+    <Compile Include="Controllers\Admin\HandlingStudentsController.cs" />
+    <Compile Include="Controllers\Admin\LevelsController.cs" />
     <Compile Include="Controllers\Admin\Students_GroupesController.cs" />
+    <Compile Include="Controllers\GroupesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\Professor\ProfessorController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -238,6 +243,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entities\Students_Groupes.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Entities\sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
@@ -318,31 +326,39 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Students\Create.cshtml" />
-    <Content Include="Views\Students\Delete.cshtml" />
-    <Content Include="Views\Students\Details.cshtml" />
-    <Content Include="Views\Students\Edit.cshtml" />
-    <Content Include="Views\Students\Index.cshtml" />
-    <Content Include="Views\Students_Groupes\Create.cshtml" />
-    <Content Include="Views\Students_Groupes\Delete.cshtml" />
-    <Content Include="Views\Students_Groupes\Details.cshtml" />
-    <Content Include="Views\Students_Groupes\Edit.cshtml" />
-    <Content Include="Views\Students_Groupes\Index.cshtml" />
-    <Content Include="Views\AspNetUsers\Create.cshtml" />
-    <Content Include="Views\AspNetUsers\Delete.cshtml" />
-    <Content Include="Views\AspNetUsers\Details.cshtml" />
-    <Content Include="Views\AspNetUsers\Edit.cshtml" />
-    <Content Include="Views\AspNetUsers\Index.cshtml" />
+    <Content Include="Views\User\test.cshtml" />
+    <Content Include="Views\Admin\Profil.cshtml" />
+    <Content Include="Views\HandlingProfessors\Create.cshtml" />
+    <Content Include="Views\HandlingProfessors\Delete.cshtml" />
+    <Content Include="Views\HandlingProfessors\Details.cshtml" />
+    <Content Include="Views\HandlingProfessors\Edit.cshtml" />
+    <Content Include="Views\HandlingProfessors\Index.cshtml" />
+    <Content Include="Views\Professor\test.cshtml" />
     <Content Include="Views\Filieres\Create.cshtml" />
     <Content Include="Views\Filieres\Delete.cshtml" />
     <Content Include="Views\Filieres\Details.cshtml" />
     <Content Include="Views\Filieres\Edit.cshtml" />
     <Content Include="Views\Filieres\Index.cshtml" />
-    <Content Include="Views\Groupes\Create.cshtml" />
-    <Content Include="Views\Groupes\Delete.cshtml" />
-    <Content Include="Views\Groupes\Details.cshtml" />
-    <Content Include="Views\Groupes\Edit.cshtml" />
-    <Content Include="Views\Groupes\Index.cshtml" />
+    <Content Include="Views\Levels\Create.cshtml" />
+    <Content Include="Views\Levels\Delete.cshtml" />
+    <Content Include="Views\Levels\Details.cshtml" />
+    <Content Include="Views\Levels\Edit.cshtml" />
+    <Content Include="Views\Levels\Index.cshtml" />
+    <Content Include="Views\HandlingStudents\Create.cshtml" />
+    <Content Include="Views\HandlingStudents\Delete.cshtml" />
+    <Content Include="Views\HandlingStudents\Details.cshtml" />
+    <Content Include="Views\HandlingStudents\Edit.cshtml" />
+    <Content Include="Views\HandlingStudents\Index.cshtml" />
+    <Content Include="Views\Students_Groupes\Create.cshtml" />
+    <Content Include="Views\Students_Groupes\Delete.cshtml" />
+    <Content Include="Views\Students_Groupes\Details.cshtml" />
+    <Content Include="Views\Students_Groupes\Edit.cshtml" />
+    <Content Include="Views\Students_Groupes\Index.cshtml" />
+    <Content Include="Views\HandlingGroupes\Create.cshtml" />
+    <Content Include="Views\HandlingGroupes\Delete.cshtml" />
+    <Content Include="Views\HandlingGroupes\Details.cshtml" />
+    <Content Include="Views\HandlingGroupes\Edit.cshtml" />
+    <Content Include="Views\HandlingGroupes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
